--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8"
+    "mongoose": "^6.3.8",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
