--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.30.6"
+    "sharp": "^0.30.6",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
